<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    tools:context=".MainActivity2">

    <LinearLayout
        android:layout_width="377dp"
        android:layout_height="175dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="394dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="-1dp"
        tools:layout_editor_absoluteY="128dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="157dp"
            android:layout_height="147dp"
            android:layout_margin="20dp"
            android:background="@color/teal_200"
            android:text="A farmer and his wolf, goat, and cabbage come to the edge of a river te wish to cross:"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="90dp"
            android:layout_height="153dp"
            android:layout_margin="30dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/fwgc_start"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="195dp"
        android:layout_height="299dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="205dp"
        android:layout_marginBottom="91dp"
        android:background="@color/teal_200"
        android:text="@string/fwgcins"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView8"

        android:layout_width="136dp"
        android:layout_height="199dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="150dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:text="@string/fwgc_end"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="113dp"
        android:layout_marginBottom="13dp"
        android:background="@color/design_default_color_error"
        android:text="@string/begin_fwgc_problem" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="302dp"
        android:layout_height="53dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="44dp"
        android:text="@string/welcome_to_the_fwgc_problem"
        android:textColor="#9575CD"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />/>


    />

</RelativeLayout>