<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_green_light"
    tools:context=".MainActivity3">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="302dp"
        android:layout_height="53dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="44dp"
        android:text="@string/welcome_to_the_8_puzzle_problem"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="377dp"
        android:layout_height="175dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="413dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="-1dp"
        tools:layout_editor_absoluteY="128dp">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="157dp"
            android:layout_height="147dp"
            android:layout_margin="20dp"
            android:background="@color/teal_200"
            android:text="@string/puzzle_intro"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="90dp"
            android:layout_height="153dp"
            android:layout_margin="30dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/puzzle_start"
            android:textSize="16sp"
            android:textStyle="bold"  />
    </LinearLayout>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="195dp"
        android:layout_height="299dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="205dp"
        android:layout_marginBottom="91dp"
        android:background="@color/teal_200"
        android:text="@string/puzzle_tt"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="136dp"
        android:layout_height="199dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="150dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:text="@string/puzzle_end"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button4"
        android:layout_width="194dp"
        android:layout_height="73dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="116dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="1dp"
        android:background="?android:attr/colorActivatedHighlight"
        android:text="Begin 8- Puzzle Problem"
        android:textStyle="bold" />

</RelativeLayout>